# s3-vector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
demo/: demo.py  sample_data.py
src/: collection_manager.py  config.py  index_engine.py  main.py  models.py  s3_storage.py  vector_service.py
src/routes/: collections.py  search.py  vectors.py
tests/: conftest.py  test_collection_manager.py  test_index_engine.py  test_integration.py  test_models.py  test_s3_storage.py  test_vector_service.py
tests/test_api/: test_collections_api.py  test_search_api.py  test_vectors_api.py
