[project]
name = "s3-vector"
version = "0.1.0"
description = "PoC Vector Store over S3-compatible Object Storage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "minio>=7.2,<8",
    "hnswlib>=0.8,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "numpy>=1.26,<3",
    "structlog>=24.0,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "coverage>=7.0,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
